# genesis

./: Cargo.toml
src/: lib.rs  main.rs
src/engine/: mod.rs
src/engine/camera/: camera_controller.rs  camera_uniform.rs  game_camera.rs  mod.rs
src/engine/config/: mod.rs
src/engine/graphics/: helpers.rs  mod.rs
src/engine/graphics/pipeline/: mod.rs
src/engine/graphics/texture/: mod.rs
src/engine/graphics/vertex_buffers/: mod.rs
src/engine/scene/: mod.rs
src/engine/scene_manager/: mod.rs  scene_manager.rs
src/engine/window/: mod.rs
src/genesis/: genesis.rs  mod.rs
src/genesis/player/: mod.rs
src/genesis/scenes/: gameplay.rs  mod.rs
src/genesis/scenes/gameplay/: mod.rs
src/genesis/scenes/gameplay/player/: mod.rs
src/genesis/shaders/: dyn_polygon-b.wgsl  dyn_polygon-c.wgsl  dyn_polygon-cam-no-tex.wgsl  dyn_polygon-cam.wgsl  dyn_polygon.wgsl  tri.wgsl  triangle.wgsl
