[package]
name = "genesis_engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = {version = "1.15.0", features = ["derive"] }
cgmath = "0.18.0"
env_logger = "0.11.3"
image = "0.25.1"
log = "0.4.21"
pollster = "0.3.0"
wgpu = "0.19.3"
winit = "0.29.15"
